ch8/ebuy-ssr/apps/catalog/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: default
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: areai51/ebuy-ssr-catalog:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
